# endless-ddd-simplified

./: .gitignore  README.md  pom.xml
cd/dockerfile/generator/: endless-ddd-simplified-generator.Dockerfile
ci/generator/: endless-ddd-simplified-generator.cmd  endless-ddd-simplified-generator.sh
ci/generator/config/: application-dev.yaml  application-prod.yaml  log4j2-prod.xml
endless-ddd-simplified-generator/: README.md  pom.xml
endless-ddd-simplified-generator-ui/: Cargo.toml  README.md  tauri.conf.json5
endless-ddd-simplified-generator-ui/config/: application.yaml  log4j2-prod.xml
endless-ddd-simplified-generator-ui/public/: index.html  installer.html  simple-test.html
endless-ddd-simplified-generator-ui/public/components/: ProjectWizard.html
endless-ddd-simplified-generator-ui/public/css/: bootstrap-icons.css
endless-ddd-simplified-generator-ui/public/js/components/: ContentManager.js  FileExplorer.js  FileProcessor.js  NewItemManager.js  ProjectWizard.js
endless-ddd-simplified-generator-ui/public/js/core/: AlertManager.js  AppBar.js  ErrorHandler.js  FileWriter.js  HttpClient.js  StorageManager.js
endless-ddd-simplified-generator-ui/src-tauri/: installer.rs  main.rs
endless-ddd-simplified-generator/config/: application.yaml
endless-ddd-simplified-generator/endless-ddd-simplified-generator-common/: pom.xml
endless-ddd-simplified-generator/endless-ddd-simplified-generator-components/: pom.xml
endless-ddd-simplified-generator/endless-ddd-simplified-generator-core/: pom.xml
endless-ddd-simplified-starter/: pom.xml
(+439 files in other folders)
